--- a/CzechSignLanguage.ipynb
+++ b/CzechSignLanguage.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,8 @@
     "\n",
     "# Check the data structure\n",
     "for label, sequences in data.items():\n",
-    "    print(f\"Word: {label}, Number of Videos: {len(sequences)}\")\n"
+    "    print(f\"Word: {label}, Number of Videos: {len(sequences)}\")\n",
+    "\n"
    ]
   }
  ],
