--- a/CzechSignLanguage.ipynb
+++ b/CzechSignLanguage.ipynb
@@ -20,63 +20,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading videos from directory: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\apple.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\apple.mp4 - Total frames: 167, Frames with keypoints: 167\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\car.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\car.mp4 - Total frames: 93, Frames with keypoints: 93\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\car2.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\car2.mp4 - Total frames: 115, Frames with keypoints: 115\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\car3.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\car3.mp4 - Total frames: 110, Frames with keypoints: 110\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\chair.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\chair.mp4 - Total frames: 95, Frames with keypoints: 95\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\church.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\church.mp4 - Total frames: 67, Frames with keypoints: 67\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\church2.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\church2.mp4 - Total frames: 138, Frames with keypoints: 138\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\clothes.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\clothes.mp4 - Total frames: 64, Frames with keypoints: 64\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\dog.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\dog.mp4 - Total frames: 92, Frames with keypoints: 92\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\door_handle.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\door_handle.mp4 - Total frames: 118, Frames with keypoints: 118\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\father.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\father.mp4 - Total frames: 62, Frames with keypoints: 62\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\grandma.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\grandma.mp4 - Total frames: 64, Frames with keypoints: 64\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\lamp.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\lamp.mp4 - Total frames: 119, Frames with keypoints: 119\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\meat.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\meat.mp4 - Total frames: 79, Frames with keypoints: 79\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\mouse.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\mouse.mp4 - Total frames: 79, Frames with keypoints: 79\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\table.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\table.mp4 - Total frames: 100, Frames with keypoints: 100\n",
-      "Loading video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\video_game.mp4\n",
-      "Video: C:\\Users\\vladimir\\Desktop\\Projects\\NS\\data\\video_game.mp4 - Total frames: 76, Frames with keypoints: 76\n",
-      "Word: apple, Number of Videos: 1\n",
-      "Word: car, Number of Videos: 3\n",
-      "Word: chair, Number of Videos: 1\n",
-      "Word: church, Number of Videos: 2\n",
-      "Word: clothes, Number of Videos: 1\n",
-      "Word: dog, Number of Videos: 1\n",
-      "Word: door_handle, Number of Videos: 1\n",
-      "Word: father, Number of Videos: 1\n",
-      "Word: grandma, Number of Videos: 1\n",
-      "Word: lamp, Number of Videos: 1\n",
-      "Word: meat, Number of Videos: 1\n",
-      "Word: mouse, Number of Videos: 1\n",
-      "Word: table, Number of Videos: 1\n",
-      "Word: video_game, Number of Videos: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import cv2\n",
     "import numpy as np\n",
@@ -161,8 +105,7 @@
     "\n",
     "# Check the data structure\n",
     "for label, sequences in data.items():\n",
-    "    print(f\"Word: {label}, Number of Videos: {len(sequences)}\")\n",
-    "\n"
+    "    print(f\"Word: {label}, Number of Videos: {len(sequences)}\")\n"
    ]
   }
  ],
